--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -205,7 +205,7 @@
 
 \title{Standardized NEON organismal data for biodiversity research}
 \author{Daijiang Li\textsuperscript{1,2†‡}, Sydne Record\textsuperscript{3†‡}, Eric Sokol\textsuperscript{4,5†‡}, Matthew E. Bitters\textsuperscript{6}, Melissa Y. Chen\textsuperscript{6}, Anny Y. Chung\textsuperscript{7}, Matthew R. Helmus\textsuperscript{8}, Ruvi Jaimes\textsuperscript{9}, Lara Jansen\textsuperscript{10}, Marta A. Jarzyna\textsuperscript{11,12}, Michael G. Just\textsuperscript{13}, Jalene M. LaMontagne\textsuperscript{14}, Brett Melbourne\textsuperscript{6}, Wynne Moss\textsuperscript{6}, Kari Norman\textsuperscript{15}, Stephanie Parker\textsuperscript{4}, Natalie Robinson\textsuperscript{4}, Bijan Seyednasrollah\textsuperscript{16}, Colin Smith\textsuperscript{17}, Sarah Spaulding\textsuperscript{5}, Thilina Surasinghe\textsuperscript{18}, Sarah Thomsen\textsuperscript{19}, Phoebe Zarnetske\textsuperscript{20,21}}
-\date{29 March, 2021}
+\date{31 March, 2021}
 
 \begin{document}
 \maketitle
@@ -219,7 +219,7 @@
 \textsuperscript{1} Department of Biological Sciences, Louisiana State University, Baton Rouge, LA, United States\\
 \textsuperscript{2} Center for Computation \& Technology, Louisiana State University, Baton Rouge, LA, United States\\
 \textsuperscript{3} Department of Biology, Bryn Mawr College, Bryn Mawr, PA, United States\\
-\textsuperscript{4} National Ecological Observatory Network (NEON), Battelle Memorial Institute, Boulder, CO, United States\\
+\textsuperscript{4} Battelle, National Ecological Observatory Network (NEON), Boulder, CO, United States\\
 \textsuperscript{5} Institute of Arctic and Alpine Research (INSTAAR), University of Colorado Boulder, Boulder, CO, United States\\
 \textsuperscript{6} Department of Ecology and Evolutionary Biology, University of Colorado Boulder, Boulder, CO, United States\\
 \textsuperscript{7} Departments of Plant Biology and Plant Pathology, University of Georgia, Athens, GA, United States\\
@@ -299,8 +299,8 @@ Macroinvertebrates & DP1.20120.001 & \href{https://doi.org/10.48443/855x-0n27}{h
 \cellcolor{gray!6}{Mosquitoes} & \cellcolor{gray!6}{DP1.10043.001} & \href{https://doi.org/10.48443/9smm-v091}{\cellcolor{gray!6}{https://doi.org/10.48443/9smm-v091 and provisional data}} & \cellcolor{gray!6}{neon.ecocomdp.10043.001.001} & \cellcolor{gray!6}{abundance} & \cellcolor{gray!6}{count per trap hour}\\
 Plants** & DP1.10058.001 & \href{https://doi.org/10.48443/abge-r811}{https://doi.org/10.48443/abge-r811 and provisional data} & neon.ecocomdp.10058.001.001 & percent cover & percent of plot area covered by taxon\\
 \cellcolor{gray!6}{Small mammals} & \cellcolor{gray!6}{DP1.10072.001} & \href{https://doi.org/10.48443/j1g9-2j27}{\cellcolor{gray!6}{https://doi.org/10.48443/j1g9-2j27 and provisional data}} & \cellcolor{gray!6}{neon.ecocomdp.10072.001.001} & \cellcolor{gray!6}{count} & \cellcolor{gray!6}{unique individuals per 100 trap nights per plot per month}\\
-Tick pathogens*** & DP1.10092.001 & \href{https://doi.org/10.48443/5fab-xv19}{https://doi.org/10.48443/5fab-xv19 and provisional data} & neon.ecocomdp.10092.001.001 & positivity rate & positive tests per pathogen per sampling event\\
-\cellcolor{gray!6}{Ticks} & \cellcolor{gray!6}{DP1.10093.001} & \href{https://doi.org/10.48443/dx40-wr20}{\cellcolor{gray!6}{https://doi.org/10.48443/dx40-wr20 and provisional data}} & \cellcolor{gray!6}{neon.ecocomdp.10093.001.001} & \cellcolor{gray!6}{abundance} & \cellcolor{gray!6}{count per square meter}\\
+Ticks & DP1.10093.001 & \href{https://doi.org/10.48443/dx40-wr20}{https://doi.org/10.48443/dx40-wr20 and provisional data} & neon.ecocomdp.10093.001.001 & abundance & count per square meter\\
+\cellcolor{gray!6}{Tick pathogens***} & \cellcolor{gray!6}{DP1.10092.001} & \href{https://doi.org/10.48443/5fab-xv19}{\cellcolor{gray!6}{https://doi.org/10.48443/5fab-xv19 and provisional data}} & \cellcolor{gray!6}{neon.ecocomdp.10092.001.001} & \cellcolor{gray!6}{positivity rate} & \cellcolor{gray!6}{positive tests per pathogen per sampling event}\\
 Zooplankton & DP1.20219.001 & \href{https://doi.org/10.48443/qzr1-jr79}{https://doi.org/10.48443/qzr1-jr79 and provisional data} & neon.ecocomdp.20219.001.001 & density & count per liter\\
 \bottomrule
 \end{tabular}}
@@ -315,8 +315,6 @@ Zooplankton & DP1.20219.001 & \href{https://doi.org/10.48443/qzr1-jr79}{https://
 \textbf{NEON Sampling Design} NEON designates breeding landbirds as ``smaller birds (usually exclusive of raptors and upland game birds) not usually associated with aquatic habitats'' (\protect\hyperlink{ref-ralph1993handbook}{Ralph 1993}, \protect\hyperlink{ref-thibault2018TOS}{Thibault 2018}). Most species observed are diurnal and include both resident and migrant species. Landbirds are surveyed via point counts in each of the 47 terrestrial sites (\protect\hyperlink{ref-thibault2018TOS}{Thibault 2018}). At most NEON sites, breeding landbird points are located in five to ten 3 \(\times\) 3 grids (Fig. \ref{fig:Fig1Design}), which are themselves located in representative (dominant) vegetation. Whenever possible, grid centers are co-located with distributed base plot centers. When sites are too small to support a minimum of five grids, separated by at least 250 m from edge to edge, point counts are completed at single points instead of grids. In these cases, points are located at the southwest corners of distributed base plots within the site. Five to 25 points may be surveyed depending on the size and spatial layout of the site, with exact point locations dictated by a stratified-random spatial design that maintains a 250 m minimum separation between points.
 
 Surveys occur during one or two sampling bouts per season, at large and small sites respectively. Observers go to the specified points early in the morning and track birds observed during each minute of a 6-minute period, following a 2-minute acclimation period, at each point (\protect\hyperlink{ref-thibault2018TOS}{Thibault 2018}). Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard. Information relevant for subsequent modeling of detectability is also collected during the point counts (e.g., weather, detection method). The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR) field protocol for spatially-balanced sampling of landbird populations (\protect\hyperlink{ref-pavlacky2017statistically}{Pavlacky Jr et al. 2017}).
-
-To protect species of concern, breeding landbird taxonomic IDs are `fuzzed,' whereby the data are provided by NEON with a taxonomic identification at one higher taxonomic level than where the protection occurs (\protect\hyperlink{ref-Elmendorf2018}{Elmendorf and Brownlee 2018}). For example, if a threatened Black-capped vireo (\emph{Vireo atricapilla}) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies.
 
 \textbf{Data Wrangling Decisions} The bird point count NEON data product (`DP1.10003.001') consists of a list of two associated data frames: \texttt{brd\_countdata} and \texttt{brd\_perpoint}. The former data frame contains information such as locations, species identities, and their counts. The latter data frame contains additional location information such as latitude and longitude coordinates and environmental conditions during the time of the observations. The separate data frames are linked by `eventID,' which refers to the location, date and time of the observation. To prepare the bird point count data for the L1 ecocomDP model, we first merged both data frames into one and then removed columns that are likely not needed for most community-level biodiversity analyses (e.g., observer names, etc.). The field \texttt{taxon\_id} in the R object \texttt{data\_bird} with the \texttt{neonDivData} data package consists of the standard AOU 4-letter species code, although \texttt{taxon\_rank} refers to eight potential levels of identification (class, family, genus, species, speciesGroup, subfamily, and subspecies). Users can decide which level is appropriate, for example one might choose to exclude all unidentified birds (taxon\_id = UNBI), where no further details are available below the class level (Aves sp.). The NEON sampling protocol has evolved over time, so users are advised to check whether the `samplingProtocolVersion' associated with bird point count data (`DP1.10003.001') fits their data requirements and subset as necessary. Older versions of protocols can be found at the \href{https://data.neonscience.org/documents/-/document_library_display/JEygRkSpUBoq/view/1883155?_110_INSTANCE_JEygRkSpUBoq_topLink=home\&_110_INSTANCE_JEygRkSpUBoq_delta1=20\&_110_INSTANCE_JEygRkSpUBoq_keywords=\&_110_INSTANCE_JEygRkSpUBoq_advancedSearch=false\&_110_INSTANCE_JEygRkSpUBoq_andOperator=true\&p_r_p_564233524_resetCur=false\&_110_INSTANCE_JEygRkSpUBoq_delta2=20\&_110_INSTANCE_JEygRkSpUBoq_cur2=1}{NEON document library}.
 
@@ -364,19 +362,6 @@ Small mammals are collected at NEON sites using Sherman traps, identified to spe
 Small mammal sampling occurs in bouts, with a bout comprised of three consecutive (or nearly consecutive) nights of trapping at each pathogen grid and one night of trapping at each diversity grid. The timing of sampling occurs within 10 days before or after the new moon. The number of bouts per year is determined by site type: core sites are typically trapped for six bouts per year (except for areas with shorter seasons due to cold weather), while relocatable sites are trapped for four bouts per year. More information can be found in \protect\hyperlink{ref-thibault2019TOS}{Thibault et al.} (\protect\hyperlink{ref-thibault2019TOS}{2019}).
 
 \textbf{Data Wrangling Decisions} In the small mammal NEON data product (\texttt{DP1.10072.001}), records are stratified by NEON site, year, month, and day and represent data from both the diversity and pathogen sampling grids. Capture records were removed if they were not identified to genus or species (e.g., if the species name was denoted as `either/or' or as family name), or if their trap status is not ``5 - capture'' or ``4 - more than 1 capture in one trap.'' Abundance data for each plot and month combination were standardized to be the number of individuals captured per 100 trap nights.
-
-\hypertarget{soil-microbes}{%
-\subsubsection{Soil Microbes}\label{soil-microbes}}
-
-\textbf{NEON Sampling Design} Soil samples are collected at ten 40 m \(\times\) 40 m NEON plots per site (\protect\hyperlink{ref-Stanish2020}{Stanish et al. 2020}). Four plots are within the tower airshed (tower plots), and six plots are distributed across the landscape (distributed plots). Within each plot, soils are sampled from three predetermined, randomly assigned XY coordinate locations, relative to the southwest corner of the plot. Soils are sampled by horizon, with organic (O) and mineral (M) material collected separately. During standard `microbes' bouts (most common), soils are taken from only the surface horizon (O if present, else M) - with a maximum depth of 30 ± 1 cm where possible. Every five years, during coordinated microbes/biogeochemistry bouts, soils are collected from both O and M horizons if both are present, and samples are processed separately for all downstream analyses.
-
-Most NEON sites, except for the boreal/arctic sites, are sampled three times a year, once at peak vegetation greenness (``peak greenness bout'') and two other times bracketing the period capturing seasonal transitions (\protect\hyperlink{ref-Stanish2020}{Stanish et al. 2020}). This results in \textasciitilde10 plots \(\times\) 3 locations \(\times\) 1 or 2 horizons \(\times\) 3 bouts = 90 to 180 soil samples per site per year for most sites.
-
-Sample timing and locations for soil microbes have changed in important ways since data collection began at NEON. From 2013 to the end of 2014, microbial analyses were performed on all soil samples at all sites. From January 2014 to September 2014, soil samples were pooled at the plot and horizon levels for some plots, to assess the ability of pooled data to provide information. Thus, a subset of analyses during this period reflect soils pooled to the per‐plot and per‐horizon level. This method was subsequently adopted, and from 2015 on soil samples from the same plot and for the same horizon type were pooled prior to analyses. 2015 saw an additional sampling design change, wherein microbial analyses were reduced to occur only once per year, during the period of peak greenness/productivity, at all sites. This change held until 2019, at which point microbial analyses were altered one last time to occur once per year, during the period of peak greenness/productivity, at one site per domain and during all coordinated bouts (every five years) at all sites.
-
-\textbf{Data Wrangling Decisions} Unlike other NEON biodiversity data products, the soil microbial NEON data product (\texttt{DP1.10107.001}) requires significant pre-processing to go from raw sequence data to a community matrix, and the exact bioinformatics methods will vary depending on use case. Briefly, major decisions during this process will depend on whether users are working with fungal (ITS) or bacterial (16S) data, if the goal is to maximize read quality and taxonomic resolution vs.~number of reads retained through the quality filter process, and whether to remove or retain reverse complement reads for a merged sequence. The full description of a suggested bioinformatics pipeline, how to run sensitivity analyses on user-defined parameters, accompanying code, and vignettes are described in Qin et al.~in prep. At the end of the suggested bioinformatics pipeline, users will have a phyloseq object, which is a commonly-used format for sequence-based analysis software. The phyloseq object will contain a table of ASV (amplicon sequence variant) sequences, a table of taxonomic assignments, and soil chemical and physical data associated with corresponding sample locations and sampling bouts.
-
-Note that NEON provides both ITS and 16S marker gene sequence data for soil, benthic, and surface water microbes in data products DP1.10108.001, DP1.20280.001, and DP1.20282.001, respectively. Based on the input from the potential data user community, NEON staff scientists have recently developed an in-house bioinformatics pipeline to produce associated derived soil, benthic, and surface water microbe community composition data products, which are published as DP1.10081.001, DP1.20086.001, and DP1.20141.001, respectively. However, at the time of writing this, the completed community composition data products have not been fully published; thus, they focus on the soil microbial marker gene sequences data product (DP1.10108.001), which has the most extensive spatial and temporal coverage for data availability out of the marker gene sequence data products.
 
 \hypertarget{terrestrial-plants}{%
 \subsubsection{Terrestrial Plants}\label{terrestrial-plants}}
@@ -470,7 +455,7 @@ The data package \texttt{neonDivData} can be installed from Github. Installation
 
 \begin{table}
 
-\caption{\label{tab:dataSummary}Summary of data products included in this study (as of 29 March, 2021). Users can call the R objects in the \texttt{R\ object} column from the R data package \texttt{neonDivData} to get the standardized data for specific taxonomic groups.}
+\caption{\label{tab:dataSummary}Summary of data products included in this study (as of 31 March, 2021). Users can call the R objects in the \texttt{R\ object} column from the R data package \texttt{neonDivData} to get the standardized data for specific taxonomic groups.}
 \centering
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{llrrll}
@@ -486,8 +471,8 @@ Macroinvertebrates & data\_macroinvertebrate & 1330 & 34 & 2014-07-01 & 2020-08-
 \cellcolor{gray!6}{Mosquitoes} & \cellcolor{gray!6}{data\_mosquito} & \cellcolor{gray!6}{128} & \cellcolor{gray!6}{47} & \cellcolor{gray!6}{2014-04-09} & \cellcolor{gray!6}{2020-06-16}\\
 Plants & data\_plant & 6197 & 47 & 2013-06-24 & 2020-10-23\\
 \cellcolor{gray!6}{Small mammals} & \cellcolor{gray!6}{data\_small\_mammal} & \cellcolor{gray!6}{145} & \cellcolor{gray!6}{46} & \cellcolor{gray!6}{2013-06-19} & \cellcolor{gray!6}{2020-11-20}\\
-Tick pathogens & data\_tick\_pathogen & 12 & 15 & 2014-04-17 & 2018-10-03\\
-\cellcolor{gray!6}{Ticks} & \cellcolor{gray!6}{data\_tick} & \cellcolor{gray!6}{19} & \cellcolor{gray!6}{46} & \cellcolor{gray!6}{2014-04-02} & \cellcolor{gray!6}{2020-10-06}\\
+Ticks & data\_tick & 19 & 46 & 2014-04-02 & 2020-10-06\\
+\cellcolor{gray!6}{Tick pathogens} & \cellcolor{gray!6}{data\_tick\_pathogen} & \cellcolor{gray!6}{12} & \cellcolor{gray!6}{15} & \cellcolor{gray!6}{2014-04-17} & \cellcolor{gray!6}{2018-10-03}\\
 Zooplankton & data\_zooplankton & 157 & 7 & 2014-07-02 & 2020-07-22\\
 \bottomrule
 \end{tabular}}
@@ -546,7 +531,7 @@ In addition to allowing for quick exploration of macroecological patterns of ric
 
 NEON organismal data hold enormous potential to understand biodiversity change across space and time (\protect\hyperlink{ref-balch2019neon}{Balch et al. 2019}, \protect\hyperlink{ref-jones2021synergies}{Jones et al. 2021}). Multiple biodiversity research and education programs have used NEON data even before NEON became fully operational in May 2019 (e.g., \protect\hyperlink{ref-farrell2018power}{Farrell and Carey 2018}, \protect\hyperlink{ref-read2018among}{Read et al. 2018}). With the expected long-term investment to maintain NEON over the next 30 years, NEON organismal data will be an invaluable tool for understanding and tracking biodiversity change. NEON data are unique relative to data collected by other similar networks (e.g., LTER, CZO) because observation collection protocols are standardized across sites, enabling researchers to address macroscale questions in environmental science without having to synthesize disparate data sets that differ in collection methods (\protect\hyperlink{ref-jones2021synergies}{Jones et al. 2021}). The data package presented in this paper holds great potential in making NEON data easier to use and more comparable across studies. Whereas the data collection protocols implemented by NEON staff are standardized, the decisions NEON data users make in wrangling their data after downloading NEON's open data will not necessarily be similar unless the user community adopts a community data standard, such as the ecocomDP data model. Adopting such a data model early on in the life of the observatory will ensure that results of studies using NEON data will be comparable and thus easier to synthesize. By providing a standardized and easy-to-use data package of NEON organismal data, our effort here will significantly lower the barriers to use the NEON organismal data for biodiversity research by many current and future researchers and will ensure that studies using NEON organismal data are comparable.
 
-There are some important notes about the data package we provided. First, our processes assume that NEON ensured correct identifications of species. However, since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easy to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records regardless of their taxon IDs level. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \ref{fig:Fig3Curve}). Users thus need to carefully consider which level of taxon IDs they need to address their research questions. Another note regarding species names is the term `sp.' vs `spp.' across NEON organismal data collections; the term `sp.' refers to a single morphospecies whereas the term `spp.' refers to more than one morphospecies. This is an important point to consider for community ecology or biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. Second, we standardized species abundance measurements to make them comparable across different sampling events within each taxonomic group (Table \ref{tab:dataMapping}). Such standardization is critical to study and compare biodiversity. And finally, there are other organismal groups (Aquatic Microbes and Aquatic Plants; soil microbes are covered in Qin et al.~in prep) not included in this study given the complexity of the data.
+There are some important notes about the data package we provided. First, our processes assume that NEON ensured correct identifications of species. However, since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easy to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records regardless of their taxon IDs level. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \ref{fig:Fig3Curve}). Users thus need to carefully consider which level of taxon IDs they need to address their research questions. Another note regarding species names is the term `sp.' vs `spp.' across NEON organismal data collections; the term `sp.' refers to a single morphospecies whereas the term `spp.' refers to more than one morphospecies. This is an important point to consider for community ecology or biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. It is also important to point out that NEON fuzzed taxonomic IDs to one higher taxonomic level to protect species of concern. For example, if a threatened Black-capped vireo (\emph{Vireo atricapilla}) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies. Second, we standardized species abundance measurements to make them comparable across different sampling events within each taxonomic group (Table \ref{tab:dataMapping}). Such standardization is critical to study and compare biodiversity. And finally, NEON publishes data for additional organismal groups, which were not included in this study given the complexity of the data. For example, aquatic plants (DP1.20066.001 and DP1.20072.001); benthic microbe abundances (DP1.20277.001), metagenome sequences (DP1.20279.001), marker gene sequences (DP1.20280.001), and community composition (DP1.20086.001); surface water microbe abundances (DP1.20278.001), metagenome sequences (DP1.20281.001), marker gene sequences (DP1.20282.001), and community composition (DP1.20141.001); and soil microbe biomass (DP1.10104.001), metagenome sequences (DP1.10107.001), marker gene sequences (DP1.10108.001), and community composition (DP1.10081.001) were not considered here, though future work may utilize \texttt{neonDivData} to align these datasets. Users interested in further explorations of these data products may find more information on the NEON data portal (\url{https://data.neonscience.org/}). Additionally, concurrent work on a suggested bioinformatics pipeline and how to run sensitivity analyses on user-defined parameters for NEON soil microbial data, including code and vignettes, is described in Qin et al.~in prep.
 
 All code for the Data Wrangling Decisions are available within the R package \texttt{ecocomDP} (\url{https://github.com/EDIorg/ecocomDP}). Users can modify the code if they need to make different decisions during the data wrangling process and update our workflows in our code by submitting a pull request to our Github repository. If researchers wish to generate their own derived organismal data sets from NEON data with slightly different decisions than the ones outlined in this paper, we recommend that they use the ecocomDP framework, contribute their workflow to the ecocomDP R package, upload the data to the EDI repository, and cite their data with the discoverable DOI given to them by EDI. Note that the ecocomDP data model was intended for community ecology analyses and may not be well suited for population-level analyses.
 
@@ -608,9 +593,6 @@ Curtis, J. T. 1959. The vegetation of wisconsin: An ordination of plant communit
 
 \leavevmode\hypertarget{ref-egli2020taxonomic}{}%
 Egli, L., K. E. LeVan, and T. T. Work. 2020. Taxonomic error rates affect interpretations of a national-scale ground beetle monitoring program at national ecological observatory network. Ecosphere 11:e03035.
-
-\leavevmode\hypertarget{ref-Elmendorf2018}{}%
-Elmendorf, S., and H. Brownlee. 2018. NEON algorithm theoretical basis document (ATBD): OS general transitions. NEON.DOC.004825vA. NEON (National Ecological Observatory Network).
 
 \leavevmode\hypertarget{ref-farley2018situating}{}%
 Farley, S. S., A. Dawson, S. J. Goring, and J. W. Williams. 2018. Situating ecology as a big-data science: Current advances, challenges, and solutions. BioScience 68:563--576.
@@ -758,9 +740,6 @@ Rudenko, N., M. Golovchenko, L. Grubhoffer, and J. H. Oliver Jr. 2011. Updates o
 
 \leavevmode\hypertarget{ref-sauer2017first}{}%
 Sauer, J. R., K. L. Pardieck, D. J. Ziolkowski Jr, A. C. Smith, M.-A. R. Hudson, V. Rodriguez, H. Berlanga, D. K. Niven, and W. A. Link. 2017. The first 50 years of the north american breeding bird survey. The Condor: Ornithological Applications 119:576--593.
-
-\leavevmode\hypertarget{ref-Stanish2020}{}%
-Stanish, L., S. Weintraub, E.-L. S. Hinckley, and J. Parnell. 2020. TOS protocol and procedure: SLS - soil biogeochemical and microbial sampling. NEON.DOC.014048vN. NEON (National Ecological Observatory Network).
 
 \leavevmode\hypertarget{ref-thibault2018TOS}{}%
 Thibault, K. 2018. TOS protocol and procedure: Breeding landbird abundance and diversity. NEON.DOC.014041vJ. NEON (National Ecological Observatory Network).
