--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -65,7 +65,7 @@ library(stringr)
 ^1^ Department of Biological Sciences, Louisiana State University, Baton Rouge, LA, United States  
 ^2^ Center for Computation & Technology, Louisiana State University, Baton Rouge, LA, United States  
 ^3^ Department of Biology, Bryn Mawr College, Bryn Mawr, PA, United States  
-^4^ National Ecological Observatory Network (NEON), Battelle Memorial Institute, Boulder, CO, United States  
+^4^ Battelle, National Ecological Observatory Network (NEON), Boulder, CO, United States    
 ^5^ Institute of Arctic and Alpine Research (INSTAAR), University of Colorado Boulder, Boulder, CO, United States  
 ^6^ Department of Ecology and Evolutionary Biology, University of Colorado Boulder, Boulder, CO, United States  
 ^7^ Departments of Plant Biology and Plant Pathology, University of Georgia, Athens, GA, United States  
@@ -160,8 +160,6 @@ select(data_summary, taxon_group,
 
 Surveys occur during one or two sampling bouts per season, at large and small sites respectively. Observers go to the specified points early in the morning and track birds observed during each minute of a 6-minute period, following a 2-minute acclimation period, at each point [@thibault2018TOS]. Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard. Information relevant for subsequent modeling of detectability is also collected during the point counts (e.g., weather, detection method). The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR) field protocol for spatially-balanced sampling of landbird populations [@pavlacky2017statistically].  
 
-To protect species of concern, breeding landbird taxonomic IDs are ‘fuzzed’, whereby the data are provided by NEON with a taxonomic identification at one higher taxonomic level than where the protection occurs [@Elmendorf2018]. For example, if a threatened Black-capped vireo (_Vireo atricapilla_) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies.
-
 **Data Wrangling Decisions** The bird point count NEON data product (‘DP1.10003.001’) consists of a list of two associated data frames: `brd_countdata` and `brd_perpoint`. The former data frame contains information such as locations, species identities, and their counts. The latter data frame contains additional location information such as latitude and longitude coordinates and environmental conditions during the time of the observations. The separate data frames are linked by ‘eventID’, which refers to the location, date and time of the observation. To prepare the bird point count data for the L1 ecocomDP model, we first merged both data frames into one and then removed columns that are likely not needed for most community-level biodiversity analyses (e.g., observer names, etc.). The field `taxon_id` in the R object `data_bird` with the `neonDivData` data package consists of the standard AOU 4-letter species code, although `taxon_rank` refers to eight potential levels of identification (class, family, genus, species, speciesGroup, subfamily, and subspecies). Users can decide which level is appropriate, for example one might choose to exclude all unidentified birds (taxon_id = UNBI), where no further details are available below the class level (Aves sp.). The NEON sampling protocol has evolved over time, so users are advised to check whether the ‘samplingProtocolVersion’ associated with bird point count data (‘DP1.10003.001’) fits their data requirements and subset as necessary. Older versions of protocols can be found at the [NEON document library](https://data.neonscience.org/documents/-/document_library_display/JEygRkSpUBoq/view/1883155?_110_INSTANCE_JEygRkSpUBoq_topLink=home&_110_INSTANCE_JEygRkSpUBoq_delta1=20&_110_INSTANCE_JEygRkSpUBoq_keywords=&_110_INSTANCE_JEygRkSpUBoq_advancedSearch=false&_110_INSTANCE_JEygRkSpUBoq_andOperator=true&p_r_p_564233524_resetCur=false&_110_INSTANCE_JEygRkSpUBoq_delta2=20&_110_INSTANCE_JEygRkSpUBoq_cur2=1). 
 
 ### Ground Beetles and Herp Bycatch
@@ -206,7 +204,7 @@ Small mammal sampling occurs in bouts, with a bout comprised of three consecutiv
 
 **Data Wrangling Decisions** In the small mammal NEON data product (`DP1.10072.001`), records are stratified by NEON site, year, month, and day and represent data from both the diversity and pathogen sampling grids. Capture records were removed if they were not identified to genus or species (e.g., if the species name was denoted as ‘either/or’ or as family name), or if their trap status is not “5 - capture” or “4 - more than 1 capture in one trap”.  Abundance data for each plot and month combination were standardized to be the number of individuals captured per 100 trap nights.
 
-### Soil Microbes
+<!-- ### Soil Microbes
 
 **NEON Sampling Design** Soil samples are collected at ten 40 m $\times$ 40 m NEON plots per site [@Stanish2020]. Four plots are within the tower airshed (tower plots), and six plots are distributed across the landscape (distributed plots). Within each plot, soils are sampled from three predetermined, randomly assigned XY coordinate locations, relative to  the southwest corner of the plot. Soils are sampled by horizon, with organic (O) and mineral (M) material collected separately. During standard ‘microbes’ bouts (most common), soils are taken from only the surface horizon (O if present, else M) - with a maximum depth of 30 ± 1 cm where possible. Every five years, during coordinated microbes/biogeochemistry bouts, soils are collected from both O and M horizons if both are present, and samples are processed separately for all downstream analyses.
 
@@ -217,7 +215,7 @@ Sample timing and locations for soil microbes have changed in important ways sin
 
 **Data Wrangling Decisions** Unlike other NEON biodiversity data products, the soil microbial NEON data product (`DP1.10107.001`) requires significant pre-processing to go from raw sequence data to a community matrix, and the exact bioinformatics methods will vary depending on use case. Briefly, major decisions during this process will depend on whether users are working with fungal (ITS) or bacterial (16S) data, if the goal is to maximize read quality and taxonomic resolution vs. number of reads retained through the quality filter process, and whether to remove or retain reverse complement reads for a merged sequence. The full description of a suggested bioinformatics pipeline, how to run sensitivity analyses on user-defined parameters, accompanying code, and vignettes are described in Qin et al. in prep. At the end of the suggested bioinformatics pipeline, users will have a phyloseq object, which is a commonly-used format for sequence-based analysis software. The phyloseq object will contain a table of ASV (amplicon sequence variant) sequences, a table of taxonomic assignments, and soil chemical and physical data associated with corresponding sample locations and sampling bouts.
 
-Note that NEON provides both ITS and 16S marker gene sequence data for soil, benthic, and surface water microbes in data products DP1.10108.001, DP1.20280.001, and DP1.20282.001, respectively. Based on the input from the potential data user community, NEON staff scientists have recently developed an in-house bioinformatics pipeline to produce associated derived soil, benthic, and surface water microbe community composition data products, which are published as DP1.10081.001, DP1.20086.001, and DP1.20141.001, respectively. However, at the time of writing this, the completed community composition data products have not been fully published; thus, they focus on the soil microbial marker gene sequences data product (DP1.10108.001), which has the most extensive spatial and temporal coverage for data availability out of the marker gene sequence data products. 
+Note that NEON provides both ITS and 16S marker gene sequence data for soil, benthic, and surface water microbes in data products DP1.10108.001, DP1.20280.001, and DP1.20282.001, respectively. Based on the input from the potential data user community, NEON staff scientists have recently developed an in-house bioinformatics pipeline to produce associated derived soil, benthic, and surface water microbe community composition data products, which are published as DP1.10081.001, DP1.20086.001, and DP1.20141.001, respectively. However, at the time of writing this, the completed community composition data products have not been fully published; thus, they focus on the soil microbial marker gene sequences data product (DP1.10108.001), which has the most extensive spatial and temporal coverage for data availability out of the marker gene sequence data products.  -->
 
 ### Terrestrial Plants
 
@@ -356,7 +354,7 @@ include_graphics(here::here("manuscript/figures/beetle_rarefaction.png"))
 
 NEON organismal data hold enormous potential to understand biodiversity change across space and time [@balch2019neon; @jones2021synergies]. Multiple biodiversity research and education programs have used NEON data even before NEON became fully operational in May 2019 [e.g., @farrell2018power; @read2018among]. With the expected long-term investment to maintain NEON over the next 30 years, NEON organismal data will be an invaluable tool for understanding and tracking biodiversity change. NEON data are unique relative to data collected by other similar networks (e.g., LTER, CZO) because observation collection protocols are standardized across sites, enabling researchers to address macroscale questions in environmental science without having to synthesize disparate data sets that differ in collection methods [@jones2021synergies]. The data package presented in this paper holds great potential in making NEON data easier to use and more comparable across studies. Whereas the data collection protocols implemented by NEON staff are standardized, the decisions NEON data users make in wrangling their data after downloading NEON’s open data will not necessarily be similar unless the user community adopts a community data standard, such as the ecocomDP data model. Adopting such a data model early on in the life of the observatory will ensure that results of studies using NEON data will be comparable and thus easier to synthesize. By providing a standardized and easy-to-use data package of NEON organismal data, our effort here will significantly lower the barriers to use the NEON organismal data for biodiversity research by many current and future researchers and will ensure that studies using NEON organismal data are comparable.
 
-There are some important notes about the data package we provided. First, our processes assume that NEON ensured correct identifications of species. However, since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easy to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records regardless of their taxon IDs level. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \@ref(fig:Fig3Curve)). Users thus need to carefully consider which level of taxon IDs they need to address their research questions. Another note regarding species names is the term ‘sp.’ vs ‘spp.’ across NEON organismal data collections; the term ‘sp.’ refers to a single morphospecies whereas the term ‘spp.’ refers to more than one morphospecies. This is an important point to consider for community ecology or biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. Second, we standardized species abundance measurements to make them comparable across different sampling events within each taxonomic group (Table \@ref(tab:dataMapping)). Such standardization is critical to study and compare biodiversity. And finally, there are other organismal groups (Aquatic Microbes and Aquatic Plants; soil microbes are covered in Qin et al. in prep) not included in this study given the complexity of the data.   
+There are some important notes about the data package we provided. First, our processes assume that NEON ensured correct identifications of species. However, since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easy to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records regardless of their taxon IDs level. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \@ref(fig:Fig3Curve)). Users thus need to carefully consider which level of taxon IDs they need to address their research questions. Another note regarding species names is the term ‘sp.’ vs ‘spp.’ across NEON organismal data collections; the term ‘sp.’ refers to a single morphospecies whereas the term ‘spp.’ refers to more than one morphospecies. This is an important point to consider for community ecology or biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. It is also important to point out that NEON fuzzed taxonomic IDs to one higher taxonomic level to protect species of concern. For example, if a threatened Black-capped vireo (_Vireo atricapilla_) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies. Second, we standardized species abundance measurements to make them comparable across different sampling events within each taxonomic group (Table \@ref(tab:dataMapping)). Such standardization is critical to study and compare biodiversity. And finally, NEON publishes data for additional organismal groups, which were not included in this study given the complexity of the data. For example, aquatic plants (DP1.20066.001 and DP1.20072.001); benthic microbe abundances (DP1.20277.001), metagenome sequences (DP1.20279.001), marker gene sequences (DP1.20280.001), and community composition (DP1.20086.001); surface water microbe abundances (DP1.20278.001), metagenome sequences (DP1.20281.001), marker gene sequences (DP1.20282.001), and community composition (DP1.20141.001); and soil microbe biomass (DP1.10104.001), metagenome sequences (DP1.10107.001), marker gene sequences (DP1.10108.001), and community composition (DP1.10081.001) were not considered here, though future work may utilize `neonDivData` to align these datasets. Users interested in further explorations of these data products may find more information on the NEON data portal (https://data.neonscience.org/). Additionally, concurrent work on a suggested bioinformatics pipeline and how to run sensitivity analyses on user-defined parameters for NEON soil microbial data, including code and vignettes, is described in Qin et al. in prep.
 
 All code for the Data Wrangling Decisions are available within the R package `ecocomDP` (https://github.com/EDIorg/ecocomDP). Users can modify the code if they need to make different decisions during the data wrangling process and update our workflows in our code by submitting a pull request to our Github repository. If researchers wish to generate their own derived organismal data sets from NEON data with slightly different decisions than the ones outlined in this paper, we recommend that they use the ecocomDP framework, contribute their workflow to the ecocomDP R package, upload the data to the EDI repository, and cite their data with the discoverable DOI given to them by EDI. Note that the ecocomDP data model was intended for community ecology analyses and may not be well suited for population-level analyses. 
 
